# DBAtools

./: .gitignore  INSTALL  Makefile.am  README  build.sh  configure.ac
data/: Licence  Licence.c  Licence.sh  Makefile.defs  dbatools-2.6-1.spec  desc.bbed  desc.commands  desc.dbatools  desc.man  desc.nlsdata  psf
etc/: Makefile.am
etc/crs/skel/: user.issue  user.kshrc  user.profile  user.shrc
etc/oracle/: Makefile.am  rwpat.example
etc/oracle/skel/: Makefile.am  user.issue  user.login.sql  user.profile  user.shrc  user.vimrc
include/: Makefile.am  dbinfo.h
lib/: Makefile.am
lib/dbinfo/: arg.c  bufsplit.c  dbinfo.c  getcmd.c  getctx.c  gethost.c  gethost_aix.c  getscript.c  setcmd.c
sbin/: Makefile.am  adbatch.c  backup_example.sh  cmmaintpkg.sh  cmvgpkg.sh  dbh.c  dbstart.sh
sbin/cmmaintpkg.d/: Makefile.am  cmmaintpkg.c  cmvgpkg.c  cmviewcl.c  getvar.c  msg.c  tkit.c  tkit.h
sbin/dbacmd/: Makefile.am  dbacmd.c  dbopts.c  dbopts.h
scripts/: checkinstall.commands  postinstall.bbed  postinstall.commands  postinstall.man  preinstall.commands  preremove.bbed  preremove.commands  request.commands
share/: Makefile.am
share/lib/: Makefile.am
share/lib/functions/: Makefile.am  appspass.sh  getoavars.sh  getsubopts.sh  menu.sh  msg.sh  oiconnect.sh  preserve.sh  realpath.sh  setapps.sh  setdb.sh  setoavars.sh  sg.sh  sqlprompt.sh  suboavar.sh  suboavars.sh  xmlvar.sh
share/lib/rpt/: Makefile.am
share/lib/rpt/ps/: Makefile.am
share/lib/rpt/ps/aln/: Makefile.am  comment  prog  prog.hp
share/lib/rpt/ps/apc/: Makefile.am  comment  prog  prog.solaris
share/lib/rpt/ps/cm/: Makefile.am  comment  prog  prog.aix  prog.solaris
share/lib/rpt/ps/db/: Makefile.am  comment  prog.hp  prog.solaris
share/lib/rpt/ps/dis/: Makefile.am  comment  prog.hp
share/lib/rpt/ps/dln/: Makefile.am  comment  prog  prog.solaris
share/lib/rpt/ps/fmc/: Makefile.am  comment
share/lib/rpt/ps/fms/: Makefile.am  comment  prog.hp  prog.solaris
share/lib/rpt/ps/frm/: Makefile.am  comment  prog.hp  prog.solaris
share/lib/rpt/ps/opmn/: Makefile.am  comment  prog  prog.hp
share/lib/rpt/ps/rep/: Makefile.am  comment  prog.hp  prog.solaris
share/lib/rpt/tns/: Makefile.am
share/lib/rpt/tns/aln/: Makefile.am  comment  prog
share/lib/rpt/tns/dln/: Makefile.am  comment  prog.solaris
share/lib/shell/: Makefile.am  adstart.m4  agentstart.m4  dbshut.m4  dbstart.m4  lsnrstart.m4  opmnstart.m4
share/lib/sql/: ConcatStr.sql  Makefile.am  addresp.pls  appspass.sql  asm_params.sql  changepassword.pls  createuser.pls  decrypt.pls  get_fnd_pwd.pls  get_pwd.pls  glogin.sql  login.sql  sessions.sql
share/lib/templates/custom/: addbctl.sh  adstopdb.sql  adstrtdb.sql
share/lib/templates/examples/: adstart_sid.m4  adstatus_sid.m4  cmstart_crs.m4  cmstart_sid.m4  cmstatus_crs.m4  cmstatus_sid.m4  start_sid.m4  status_sid.m4
share/man/: Makefile.am
share/man/man1/: Makefile.am  adbatch.1m  adcfg.1  adcpusr.1  adctl.1  adenv.1  adinstcustom.1  adpasswd.1  adps.1  adsessions.1  adstart.1m  adstatus.1  adstop.1m  adsvcctl.1m  adtns.1  ckdba.1  ckoper.1  ckrac.1  ckres.1  cmmaintpkg.1m  cmvgpkg.1m  ctx.1  ctxvar.1  dbacmd.1m  dbh.1  dbshut.1m  dbstart.1m  dbvers.1m  dos2ux.1  getappspass.1  getctx.1  getprb.1  intro.1t  lsnrstart.1m  lsnrstop.1m  lsp.1  mkbbed.1  mkdefs.1m  nbread.1  oratab.1m  (+12 more)
share/man/man3/: Makefile.am  dbinfo.3  getoavar.3  setoavar.3
share/man/man9/: DBAtools.9  Makefile.am
share/nlsdata/: Makefile.am  lx00001.nlb  lx10001.nlb  lx1boot.nlb  lx20001.nlb  lx20005.nlb  lx2001f.nlb  lx20020.nlb  lx20021.nlb  lx20022.nlb  lx20023.nlb  lx20024.nlb  lx20025.nlb  lx20026.nlb  lx20027.nlb  lx20028.nlb  lx2002e.nlb  lx20030.nlb  lx200aa.nlb  lx200ab.nlb  lx200ae.nlb  lx200af.nlb  lx200b1.nlb  lx200b2.nlb  lx200b3.nlb  lx20230.nlb  lx20367.nlb  lx20368.nlb  lx20369.nlb  lx207d0.nlb  lx40001.nlb  lx40002.nlb  lx40003.nlb  lx40004.nlb  lx40005.nlb  lx40006.nlb  lx40010.nlb
