#ident $Header$

nlsdir = $(datadir)/nlsdata

dist_nls_DATA = \
	lx00001.nlb \
	lx0boot.nlb \
	lx10001.nlb \
	lx1boot.nlb \
	lx20001.nlb \
	lx20005.nlb \
	lx2001f.nlb \
	lx20020.nlb \
	lx20021.nlb \
	lx20022.nlb \
	lx20023.nlb \
	lx20024.nlb \
	lx20025.nlb \
	lx20026.nlb \
	lx20027.nlb \
	lx20028.nlb \
	lx2002e.nlb \
	lx20030.nlb \
	lx200aa.nlb \
	lx200ab.nlb \
	lx200ae.nlb \
	lx200af.nlb \
	lx200b1.nlb \
	lx200b2.nlb \
	lx200b3.nlb \
	lx20230.nlb \
	lx20367.nlb \
	lx20368.nlb \
	lx20369.nlb \
	lx207d0.nlb \
	lx40001.nlb \
	lx40002.nlb \
	lx40003.nlb \
	lx40004.nlb \
	lx40005.nlb \
	lx40006.nlb \
	lx40010.nlb 
